--- a/package.json
+++ b/package.json
@@ -61,7 +61,11 @@
     "yargs": "^3.18.0"
   },
   "devDependencies": {
+    "file-loader": "^0.8.4",
+    "image-webpack-loader": "^1.6.1",
+    "imagemin": "^3.2.0",
     "react-hot-loader": "^1.2.8",
+    "redux-devtools-diff-monitor": "^0.2.2",
     "webpack-dev-server": "^1.10.1"
   }
 }
