Added Slider Component

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "image-webpack-loader": "^1.6.1",
     "imagemin": "^3.2.0",
     "react-hot-loader": "^1.2.8",
+    "react-slider": "^0.5.1",
     "redux-devtools-diff-monitor": "^0.2.2",
     "webpack-dev-server": "^1.10.1"
   }
